# Anomalous-sound-detection-with-complex-valued-hybrid-neural-networks-considering-phase-variations

./: README.md  all_features_run.sh  all_run.sh  pyproject.toml  test.py  training.py
augmentation/: crop.py
complexmodules/: complex_activation_function.py  complex_functional.py  complex_modules.py
configures/: config.yaml
configures/augumentation/: random_crop.yaml
configures/data_structures/: default.yaml
configures/dataloader/: default.yaml  develop.yaml  small1000.yaml
configures/dataset/: ToyADMOS.yaml  develop.yaml
configures/experiments/: default.yaml
configures/metrics/: gamma.yaml  gaussian.yaml
configures/models/: cnn.yaml
configures/optimizer/: Adam.yaml  RAdam.yaml  SGD.yaml
configures/preprocessing/: complex_spectrogram.yaml  log_and_raw_complex_spectrogram.yaml  log_complex_spectrogram.yaml
configures/scheduler/: CosineAnnealingLR.yaml  CosineLRScheduler.yaml  StepLR.yaml
configures/test/: develop.yaml
configures/training/: default.yaml  develop.yaml
datamodules/: dataloader.py  dataset.py
environments/: Dockerfile
environments/gpu/: docker-compose.yaml
experiments/: mlflow_writer.py
metrics/: anomaly_socre_metric.py
models/: cnn.py  mlp.py  resnet.py
preprocessing/: feature_extraction.py
utils/: util_dirs.py  util_files.py  util_models.py  util_optimizers.py
